[gd_scene load_steps=8 format=2]

[ext_resource path="res://Eunseo/Images/New Piskel-1.png.png" type="Texture" id=1]
[ext_resource path="res://Eunseo/Images/Shardsoul Slayer Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://Eunseo/Scenes/Ending2Normal.gd" type="Script" id=3]
[ext_resource path="res://Eunseo/Dialog/Dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://Eunseo/Images/DadDaugther.jpg" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[node name="Ending2Normal" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Monster" type="Sprite" parent="."]
position = Vector2( 372, 275 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 6
vframes = 2
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Monster"]
autoplay = "Die"
anims/Die = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 648, 310 )
rotation = 3.14159
scale = Vector2( 1.5, -1.5 )
texture = ExtResource( 1 )

[node name="Dialog" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 520, 478 )

[node name="VScrollBar2" type="VScrollBar" parent="Dialog/DialogBox/Name" index="0"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar3" type="VScrollBar" parent="Dialog/DialogBox/Name" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar4" type="VScrollBar" parent="Dialog/DialogBox/Name" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar5" type="VScrollBar" parent="Dialog/DialogBox/Name" index="3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar2" type="VScrollBar" parent="Dialog/DialogBox/Text" index="0"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar3" type="VScrollBar" parent="Dialog/DialogBox/Text" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar4" type="VScrollBar" parent="Dialog/DialogBox/Text" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="VScrollBar5" type="VScrollBar" parent="Dialog/DialogBox/Text" index="3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="Timer" type="Timer" parent="."]

[node name="Picture" type="Sprite" parent="."]
visible = false
position = Vector2( 527, 302 )
scale = Vector2( 0.130005, 0.130005 )
texture = ExtResource( 5 )

[connection signal="hide_Dialog" from="Dialog/DialogBox" to="." method="_on_DialogBox_hide_Dialog"]
[connection signal="hide_Dialog2" from="Dialog/DialogBox" to="." method="_on_DialogBox_hide_Dialog2"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Dialog"]
